src/objects/Invoice_Item_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account_Product_Geo_End_Date__c</fullName>
        <formula>Metrostudy_Contact_Product_Geography__r.MetroclientAccountProductGeography__r.EndDate__c</formula>
        <label>Account Product Geo End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Product_Geo_Start_Date__c</fullName>
        <formula>Metrostudy_Contact_Product_Geography__r.MetroclientAccountProductGeography__r.StartDate__c</formula>
        <label>Account Product Geo Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Product_Geo_Status__c</fullName>
        <formula>Metrostudy_Contact_Product_Geography__r.MetroclientAccountProductGeography__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Product Geo Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Item_Account__c</fullName>
        <formula>Invoice_Item__r.Account__c</formula>
        <label>Invoice Item Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Item_Charge_Number__c</fullName>
        <formula>Invoice_Item__r.fziiss__ChargeNumber__c</formula>
        <label>Invoice Item Charge Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Item_End_Date__c</fullName>
        <formula>Invoice_Item__r.fziiss__ServiceEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Item End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Item_Start_Date__c</fullName>
        <formula>Invoice_Item__r.fziiss__ServiceStartDate__c</formula>
        <label>Invoice Item Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Item__c</fullName>
        <label>Invoice Item</label>
        <referenceTo>fziiss__Invoice_Item__c</referenceTo>
        <relationshipLabel>Metrostudy Contact Product Geographies</relationshipLabel>
        <relationshipName>Invoice_Item_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MCPG_Account_Geography__c</fullName>
        <formula>Metrostudy_Contact_Product_Geography__r.MetroclientAccountProductGeography__r.Name</formula>
        <label>MCPG Account Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metrostudy_Contact_Product_Geography__c</fullName>
        <label>Metrostudy Contact Product Geography</label>
        <referenceTo>MetroclientContactProductGeography__c</referenceTo>
        <relationshipLabel>Invoice Items</relationshipLabel>
        <relationshipName>Invoice_Item_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Invoice Item Contact</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Invoice Item Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Item Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>